docs: add three JGDMS analyses to PROCESS_ISOLATION.md
Agent-Logs-Url: https://github.com/pfirmstone/DirtyChai/sessions/cb88a5fb-5243-416b-b42d-9a0aae7db428

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>